--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.57.4",
     "@types/stripe": "^8.0.416",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.21",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
@@ -26,12 +27,14 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-cloudinary": "^6.16.0",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "replicate": "^1.1.0",
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.17",
     "zod": "^4.1.9"
   },
   "devDependencies": {
@@ -42,7 +45,6 @@
     "@storybook/addon-onboarding": "^9.1.6",
     "@storybook/addon-vitest": "^9.1.6",
     "@storybook/nextjs-vite": "^9.1.6",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -53,7 +55,6 @@
     "eslint-plugin-storybook": "^9.1.6",
     "playwright": "^1.55.0",
     "storybook": "^9.1.6",
-    "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.2.4"
   }
