--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "next": "15.5.3",
     "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.6",
+    "posthog-js": "^1.266.0",
+    "posthog-node": "^5.8.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
