feat(security): implementar EP-009 Security Hardening completo
 Row Level Security (RLS):
- Habilita RLS em todas as tabelas (users, projects, assets, etc.)
- Políticas para isolamento por user_id
- Admin access policies para dashboard interno
- Audit logs table para tracking de ações de segurança

 Security Headers & CSP:
- Content Security Policy com whitelist de domínios
- X-Frame-Options, X-Content-Type-Options
- HSTS para HTTPS enforcement
- Referrer-Policy e Permissions-Policy

 Rate Limiting:
- 10 req/min padrão, 5 req/5min para generation
- Rate limiting por usuário e IP
- Headers informativos (X-RateLimit-*)
- Cleanup automático da store

 EXIF Stripping:
- Remoção automática de metadados EXIF via Cloudinary
- Validação de arquivos (tipo, tamanho, extensão)
- URLs assinadas para assets privados
- Transformações de segurança automáticas

 Input Validation:
- Schemas Zod para todos os inputs
- Sanitização HTML com DOMPurify
- Validação de nomes, emails, URLs
- Prevenção de path traversal

 GDPR/CCPA Compliance:
- API para export de dados (/api/gdpr/export)
- API para deletion de dados (/api/gdpr/delete)
- Anonymização de dados como alternativa
- Audit trail completo para compliance

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.13",
+    "isomorphic-dompurify": "^2.27.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
