--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "start": "next start",
     "lint": "eslint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "analyze": "ANALYZE=true npm run build",
+    "perf:analyze": "node scripts/performance-analysis.js",
+    "perf:lighthouse": "npm run perf:analyze -- --lighthouse",
+    "perf:bundle": "npm run perf:analyze -- --bundle",
+    "perf:all": "npm run perf:analyze -- --all",
+    "test:load": "node scripts/load-testing.js",
+    "deploy:staging": "vercel --prod --scope agencia-tektus",
+    "deploy:prod": "vercel --prod --scope agencia-tektus"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^15.5.3",
     "@sentry/nextjs": "^10.12.0",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
@@ -18,6 +27,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "@types/stripe": "^8.0.416",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
@@ -37,6 +47,7 @@
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
+    "web-vitals": "^5.1.0",
     "zod": "^4.1.9"
   },
   "devDependencies": {
